Update webpack dev server to https & patch safari react select layout bug

--- a/ui/src/components/fields/partials/post-list-post-selected.pcss
+++ b/ui/src/components/fields/partials/post-list-post-selected.pcss
@@ -6,6 +6,7 @@
 	margin-bottom: var(--panel-margin-vertical);
 	border: 1px solid var(--border-color);
 	background: var(--panel-post-bg-color);
+	position: relative;
 }
 
 .footer {
